src/snapshots/mirror_clone__python_version__tests__1.1^r^c1.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
            1,
        ],
        pre: Some(
            RC(
                1,
            ),
        ),
        post: None,
        dev: None,
        local: None,
    },
)
