src/snapshots/mirror_clone__python_version__tests__1.2-post-2.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
            2,
        ],
        pre: None,
        post: Some(
            2,
        ),
        dev: None,
        local: None,
    },
)
