src/snapshots/mirror_clone__python_version__tests__1.2a.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
            2,
        ],
        pre: Some(
            Alpha(
                0,
            ),
        ),
        post: None,
        dev: None,
        local: None,
    },
)
