src/snapshots/mirror_clone__python_version__tests__ord.snap
---
source: src/python_version.rs
expression: versions
---
[
    "0.1",
    "0.2",
    "1a1",
    "1b1.dev2",
    "1b1",
    "1b2+ubuntu.1",
    "1rc1",
    "1rc1.post1",
    "1",
    "1+ubuntu.1",
    "1.post1.dev2",
    "1.post1",
    "1.0.1",
    "1.0.1.1",
    "1.0.2",
    "1.0.2.1",
    "1!1",
]
