src/snapshots/mirror_clone__python_version__tests__parse@1.0-.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Err(
    Error {
        input: "-",
        code: Eof,
    },
)
